--- a/work4/index.html
+++ b/work4/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div class="bj">
-    <image class="lg" src = "img/lg.png">
+    <image class="lg" src = "./img/lg.png">
     <span class="zi">精勤博学，学以致用</span>
 </div>
 </body>
