--- a/work7-car/index.html
+++ b/work7-car/index.html
@@ -10,7 +10,7 @@
 					width: 100px;
 					height: 100px;
 					background-size:100px 100px;
-				   background-image :url('img/car.png');                /*动画持续5秒*/
+				   background-image :url('./img/car.png');                /*动画持续5秒*/
 					-webkit-animation:mycar 3s infinite; /* Safari and Chrome */
 			}
 			div.car:hover{	animation-play-state:paused;}
