--- a/work8-dh2/index.html
+++ b/work8-dh2/index.html
@@ -36,8 +36,8 @@
 	</head>
 	<body>
 		
-		<div class="aa"><img src="img/2.png" /></div>
-		<div class="bb"><img src="img/1.png" /></div>
+		<div class="aa"><img src="./img/2.png" /></div>
+		<div class="bb"><img src="./img/1.png" /></div>
 		
 	</body>
 </html>
