--- a/work1/index.html
+++ b/work1/index.html
@@ -32,17 +32,18 @@
 		 <tr>
 			 <td>爱好：</td>
 			 <td>
-				 <input type="checkbox" name="hobby" value="1">旅游<br>
-				 <input type="checkbox" name="hobby" value="2">登山<br>
-				 <input type="checkbox" name="hobby" value="3">健身<br>
-				 <input type="checkbox" name="hobby" value="4">上网<br>
-				 <input type="checkbox" name="hobby" value="5">游泳
+				 <input type="checkbox" name="hobby" value="1" ">看世界杯<br>
+				 <input type="checkbox" name="hobby" value="2" >写代码<br>
+				 <input type="checkbox" name="hobby" value="3">徒手健身<br>
+				 <input type="checkbox" name="hobby" value="4">学习网络编程<br>
+				 <input type="checkbox" name="hobby" value="5">cv
 			 </td>
 		 </tr>
 		 <tr>
 			 <td>学历：</td>
 			 <td>
 				 <select name="degree">
+					 
 					 <option value="">--请选择--</option>
 					 <option value="1">专科</option>
 					 <option value="2">本科</option>
@@ -61,13 +62,36 @@
 		 <tr>
 			 <td></td>
 			 <td>
-			 <input type="submit" value="提交">
-			 <input type="reset" value="重置">
-			 <input type="button" value="返回">
+			 <input type="submit" value="提交" style="color: darkred;">
+			 <input type="reset" value="重置" style="color: darkgreen;">
+			 <input type="button" value="返回" style="color: cadetblue;">
 			 </td>
 		 </tr>
 		</table>
 	
 	</body>
+	<style>
+		textarea{
+			color: chocolate;
+			font-family: "宋体";
+			font-size: 20px;
+		}
+		input{
+			
+			font-family: "宋体";
+			font-size: 20px;
+		}
+		
+		select{
+			color: cornflowerblue;
+			font-family: "宋体";
+			font-size: 20px;
+		}
+		body{
+			
+			font-family: "宋体";
+			font-size: 20px;
+		}
+	</style>
 	
 </html>
