--- a/work1/index.html
+++ b/work1/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	
-		<table border="1">
+		<table border="1" class="biao">
 		 <tr>
 			 <th colspan="2" align="center">信息统计表</th>
 		 </tr>
@@ -91,6 +91,10 @@
 			
 			font-family: "宋体";
 			font-size: 20px;
+		}
+		.biao:hover{
+			font-family: "宋体";
+			font-size: 26px;
 		}
 	</style>
 	
