--- a/work-13-shiyan5/index.html
+++ b/work-13-shiyan5/index.html
@@ -20,7 +20,7 @@
 			}
 			function start()
 			{
-				  setTimeout("alert('请小何欣赏跳动的心')", 100);
+				  setTimeout('alert('请小何欣赏跳动的心')', 100);
 					setTimeout("big()", 500);
 			}
             
