--- a/work-13-shiyan5/index.html
+++ b/work-13-shiyan5/index.html
@@ -16,13 +16,9 @@
 			img.src = "img/image.png";
 
 			img.onload = function() {
-				start();
+				big()
 			}
-			function start()
-			{
-				
-					setTimeout("big()", 500);
-			}
+			
             
 			function big() {
 				ctx.clearRect(40, 40, 300, 300);
