--- a/work10-shiyan4/index.html
+++ b/work10-shiyan4/index.html
@@ -10,12 +10,19 @@
         html,
         body {
             height: 100%;
+			position: relative;
+			margin: 0;
+			background-color: blanchedalmond;
         }
+		
+		body:hover {
+		    height: 100%;
+			position: relative;
+			margin: 0;
+			background-color: lightblue;
+		}
 
-        body {
-            position: relative;
-            margin: 0;
-        }
+       
 
         div {
             height: 200px;
@@ -42,17 +49,28 @@
 
     <div id="clock"></div>
 
+
 </body>
 <script>
-    function getDate() {
+	 
+	 getDate()
+	//使用定时器每秒向div写入当前时间
+	setInterval("getDate()", 1000);
+    function xq()
+    { var data = new Date(); //获取当前时间
+        var week = ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'];
+    	 document.getElementById('clock').innerHTML = week[data.getDay()]
+		 	setTimeout("getDate()", 3000)
+    }
+	function getDate() {
         var data = new Date(); //获取当前时间
         var week = ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'];
         var a = new Date().toLocaleString();  //转换格式
-        document.getElementById('clock').innerHTML = a + ' ' + week[data.getDay()]
+        document.getElementById('clock').innerHTML = a
+		setTimeout("xq()", 3000)
     }
-    getDate();
-    //使用定时器每秒向div写入当前时间
-    setInterval("getDate()", 1000);
+	
+ 
 </script>
 
 </html>
